# hydra-kratos-consent

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
src/: cache.rs  main.rs  schema.rs  serve.rs  validate.rs
