[package]
name = "hydra-kratos-consent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ['derive'] }
indexmap = { version = "1.9.3", features = ['serde'] }
error-stack = { version = "0.3.1", features = ['serde'] }
jsonptr = "0.4.0"
axum = "0.6.18"
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
schemars = "0.8.12"
url = "2.4.0"

ory-hydra-client = "2.1.1"
ory-kratos-client = "0.13.1"
